--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,12 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family:'Times New Roman', Times, serif;
+    font-family:'Times New Roman', Times, serif
 }
 
 body {
-    background: #081b29;
-    color: #ededed;
+    background: #042a47c9;
+    color: #f1f1f1;
 }
 
 .header {
@@ -42,6 +42,7 @@ body {
 .navbar a:hover,
 .navbar a:active {
     color: #00abf0;
+    background-color: aqua;
 }
 
 .home {
@@ -52,6 +53,7 @@ body {
     flex-wrap: nowrap;
     flex-direction: column;
 }
+
 
 .home-contect {
     max-width: 600px;
